main2020: Fix background size
Much easier for composition than letting the image cover the background.

--- a/Instanssi/main2020/static/main2020/css/_general.scss
+++ b/Instanssi/main2020/static/main2020/css/_general.scss
@@ -20,13 +20,28 @@ body * {
 
 body {
     position: relative;
-    background: #302352;
+    background: #2e204f !important;
 
-    // background-color: #000;
-    // background-size: 100%;
-    // background-position: top;
-
-    background: no-repeat top center/contain url(../images/webtausta.jpg), #302352;
+    &:before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 1172px;
+        background: no-repeat top center url(../images/webtausta.jpg);
+        background-size: 1172px auto;
+        @media screen and (min-width: $screen-xs-min) {
+            background-size: 100% auto;
+        }
+        @media screen and (min-width: $screen-sm-min) {
+            background-size: $screen-sm-min - $spacer * 2 auto;
+        }
+        @media screen and (min-width: $screen-md-min) {
+            background-size: $screen-md-min - $spacer * 2 auto;
+        }
+        @media screen and (min-width: $screen-lg-min) {
+            background-size: $screen-lg-min - $spacer * 2 auto;
+        }
+    }
 }
 
 h1 {
