--- a/Instanssi/main2020/static/main2020/css/_header.scss
+++ b/Instanssi/main2020/static/main2020/css/_header.scss
@@ -10,9 +10,6 @@
     .header-title {
         height: $main-header-height-lg;
     }
-    .header-bg-fx {
-        position: relative;
-    }
 
     a {
         text-decoration: none; // no underline pls
